# la-agencias

./: .env.production  .gitignore  CALENDAR_IMPLEMENTATION_SUMMARY.md  CLAUDE.md  DEPLOYMENT.md  DEPLOYMENT_PROGRESS.md  FIXES_APPLIED.md  FRONTEND_LOGIN_FIX.md  IMPLEMENTATION_COMPLETE.md  QUICK_START.md  README_DOCKER.md  SERVICE_STATUS_IMPLEMENTATION.md  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  API_DOCUMENTATION.md  CLAUDE.md  Dockerfile  FIX_LOGIN_ISSUE.md  INSTALL_EXPORT_DEPS.md  README.md  add_coordinates_and_geocode.py  check_data.py  check_orders_detail.py  create_db.py  create_test_data.py  create_test_user.py  debug_login.py  docker-entrypoint.sh  geocode_locations.py  pyproject.toml  seed_data.py  test_auth.py  test_auth_flow.py  test_frontend_flow.py  test_orders_endpoint.py  test_password_logic.py  test_years_endpoint.py
backend/alembic/: env.py
backend/alembic/versions/: 26c6d5e5a40c_add_route_guide_field_to_services.py  827463fbc5e8_merge_migration_heads.py  add_avatar_field_to_users.py  add_coordinates_to_locations.py  add_order_custom_fields.py  add_status_to_services_remove_from_orders.py  c195a6997649_fix_service_status_column_type.py  f570e2316173_initial_migration_with_all_models.py
backend/app/: main.py
backend/app/apis/: api.py  dependencies.py
backend/app/apis/endpoints/: auth.py  customers.py  exports.py  locations.py  orders.py  stats.py  upload.py  users.py
backend/app/core/: config.py  dependencies.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  customer.py  location.py  order.py  popular_trip.py  service.py  service_image.py  user.py
backend/app/schemas/: __init__.py  customer.py  location.py  order.py  service.py  stats.py  token.py  user.py
backend/app/services/: customer_service.py  export_service.py  geocoding_service.py  order_service.py  stats_service.py
backend/context/: best_python_practices.md  db_initial.sql
backend/tests/: test_main.py
free-angular-tailwind-dashboard-main/: CLAUDE.md  package-lock.json  package.json
frontend/: .dockerignore  BACKEND_SPECIFICATION.md  CLAUDE.md  Dockerfile  README.md  angular.json  nginx.conf  package-lock.json  package.json
(+118 files in other folders)
